bugfix: overflow of device select

--- a/web/src/main/webapp/style/ControlCenterApp.css
+++ b/web/src/main/webapp/style/ControlCenterApp.css
@@ -71,7 +71,8 @@ h1 {
 .statePanel {
 /*width: 100%;*/
     min-height: 30px;
-    padding-top: 9.5px;
+    padding-top: 3px;
+    /*padding-top: 9.5px;*/
     padding-left: 20px;
     padding-right: 20px;
     background-color: #e3ebed;
